--- a/Report/report.qmd
+++ b/Report/report.qmd
@@ -50,6 +50,38 @@ Perhaps our greatest replication success was our results for Spirling's multivar
 
 ## Extension
 
+The following are our additions to the research presented in this paper, as well as suggested improvements.
+
+### Party Affiliation and Speech Readability
+
+For our original additions, we decided to look at how readability evolves along party lines. The majority of Spirling's paper focuses on how cabinet status affects speech readability, rather than party affiliation. We decided to explore speech readability over time by political party.
+
+We graphed the mean FRE scores by year over time, and then disaggregated the trend lines by political party: Conservative and Liberal. We hypothesized that conservative MPs would likely not change their speech as much as Liberals, due to our belief that Liberals would garner more working class support.
+
+Our findings indicate that speech becomes easier over time after 1867 for all MPs, regardless of party affiliation. However, interestingly, after 1867, as one party increases their speech readability over a short time, the other often decreases, and vice versa.
+
+### TF-IDF Weighting
+
+For our original analysis, we also used the raw speech data for text analysis. Spirling's analysis mostly focuses on readability, so we decided to explore a bit more in the weeds. We first tokenized, preprocessed, and created a data frequency matrix (DFM). We then took the weighted TF-IDF scores for each token to find which words carried the most importance throughout the corpus.
+
+We find that simple procedural words have the highest scores, as speeches can often be very formulaic. For instance, "yes," "sir," "amend," "order," and "bill" had the highest weighted scores.
+
+### Cosine Similarity
+
+Finally, we used cosine similarity to find the speeches that are most similar with each other. We utilize our TF-IDF matrix to find the closest cosine similarity for each document. We then created a cosine similarity matrix, and pivoted this table to long format for ease of analysis. After ordering by cosine similarity score, we analyzed the document diads with the highest scores.
+
+Similar to the highest TF-IDF scores, the speeches with the highest similarity scores exhibited very formulaic language that appears to be common in parliamentary procedure. For instance, the speech duo with the highest cosine similarity score between each other was an MP in 1876 saying "he will repeat the question on Monday," and an MP in 1890 saying "I will repeat the question on Monday." The next highest duo was an MP in 1872 saying "He would withdraw the amendment," and another in 1899 saying "I will withdraw the amendment."
+
+### Suggested Improvements
+
+-   Easier to access raw data: One of our primary challenges was finding the raw speech data Spirling used in his analysis. Adding this to the Harvard Dataverse repository would be a welcome update, and could help future researchers replicate and innovate at a much easier rate.
+
+-   Party affiliation analysis: While we provide a preliminary analysis on readability and party affiliation, additional research could help determine how political parties develop their speech over time. The British Political Manifestos corpus could be of significant use here.
+
+-   More analysis of raw text: TF-IDF, cosine similarity, KWIC, etc.: Future research should focus more on analysis of the text in speeches, not just readability, as interesting and insightful details may get lost in the weeds. In addition, sentiment analysis would also be a welcome addition– it would be interesting to see how MPs in different cabinet positions or political parties change not only their speech, but the tone of their message over time in response to various extraneous factors.
+
+-   Comparing different readability scores: One final action future researchers can take is to compare FRE scores to other metrics of readability, such as Dale Chall or SMOG. This would add robustness and would make it easy to spot any discrepancies.
+
 ## References
 
 Eggers, A. & Spirling A. (Accessed 2025). Eggers and Spirling Database. <https://andy.egge.rs/eggers_spirling_database.html>
