--- a/Report/report.tex
+++ b/Report/report.tex
@@ -288,9 +288,6 @@ it with good results.
 
 \subsection{Extension}\label{extension}
 
-The following are our additions to the research presented in this paper,
-as well as suggested improvements.
-
 \subsubsection{Party Affiliation and Speech
 Readability}\label{party-affiliation-and-speech-readability}
 
@@ -318,29 +315,24 @@ analysis. Spirling's analysis mostly focuses on readability, so we
 decided to explore a bit more in the weeds. We first tokenized,
 preprocessed, and created a data frequency matrix (DFM). We then took
 the weighted TF-IDF scores for each token to find which words carried
-the most importance throughout the corpus.
-
-We find that simple procedural words have the highest scores, as
-speeches can often be very formulaic. For instance, ``yes,'' ``sir,''
-``amend,'' ``order,'' and ``bill'' had the highest weighted scores.
+the most importance throughout the corpus. We find that simple
+procedural words have the highest scores, as speeches can often be very
+formulaic. For instance, ``yes,'' ``sir,'' ``amend,'' ``order,'' and
+``bill'' had the highest weighted scores.
 
 \subsubsection{Cosine Similarity}\label{cosine-similarity}
 
 Finally, we used cosine similarity to find the speeches that are most
 similar with each other. We utilize our TF-IDF matrix to find the
-closest cosine similarity for each document. We then created a cosine
-similarity matrix, and pivoted this table to long format for ease of
-analysis. After ordering by cosine similarity score, we analyzed the
-document diads with the highest scores.
-
-Similar to the highest TF-IDF scores, the speeches with the highest
-similarity scores exhibited very formulaic language that appears to be
-common in parliamentary procedure. For instance, the speech duo with the
-highest cosine similarity score between each other was an MP in 1876
-saying ``he will repeat the question on Monday,'' and an MP in 1890
-saying ``I will repeat the question on Monday.'' The next highest duo
-was an MP in 1872 saying ``He would withdraw the amendment,'' and
-another in 1899 saying ``I will withdraw the amendment.''
+closest cosine similarity for each document. Similar to the highest
+TF-IDF scores, the speeches with the highest similarity scores exhibited
+very formulaic language that appears to be common in parliamentary
+procedure. For instance, the speech duo with the highest cosine
+similarity score between each other was an MP in 1876 saying ``he will
+repeat the question on Monday,'' and an MP in 1890 saying ``I will
+repeat the question on Monday.'' The next highest duo was an MP in 1872
+saying ``He would withdraw the amendment,'' and another in 1899 saying
+``I will withdraw the amendment.''
 
 \subsubsection{Suggested Improvements}\label{suggested-improvements}
 
